[project]
name = "rl-tasks-evaluator"
version = "0.2.0"
description = "Evaluation framework for RL tasks with real-world API integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.67.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
